clang/test/utils/update-verify-tests/Inputs/no-diags.c
void foo() {
    // expected-error@+1{{asdf}}
    int a = 2;
}

